--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -5,7 +5,6 @@
     "common_error_max": "Application Name must be max {{length}} characters",
     "common_toast_error_title": "Oh oh! Something went wrong.",
 
-
     "dashboard_home_myApplications": "My applications",
     "dashboard_home_newApplication": "New application",
     "dashboard_home_createAnEmptyApplication": "Create an empty application",
@@ -13,5 +12,13 @@
     "dashboard_home_applicationName": "Application name",
     "dashboard_home_applicationNameAlreadyExists": "There is already an application with this name.",
     "dashboard_home_toast_applicationNameAlreadyExists": "An application named {{ applicationName }} already exists.",
-    "dashboard_home_toast_errorOccuredDuringCreationProcess": "An error occured during the creation process for this application {{ applicationName }}."
+    "dashboard_home_toast_errorOccuredDuringCreationProcess": "An error occured during the creation process for this application {{ applicationName }}.",
+
+    "application_informationApplicationForm_applicationName": "Application Name",
+    "application_informationApplicationForm_information": "Information",
+    "application_informationApplicationForm_description": "Description",
+    "application_informationApplicationForm_savelabel": "Save",
+    "application_page_newProject": "New Project"
+
+
 }
