Add fields BusinessOwner technicalOwner and numberOfUsers
AB#74

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -26,6 +26,9 @@
     "application_informationApplicationForm_applicationName": "Application Name",
     "application_informationApplicationForm_information": "Information",
     "application_informationApplicationForm_description": "Description",
+    "application_informationApplicationForm_technicalOwner": "Technical owner",
+    "application_informationApplicationForm_businessOwner": "Business owner",
+    "application_informationApplicationForm_numberOfUsers": "Number of users",
     "application_page_newProject": "New Project",
     "application_toast_errorOccuredDuringUpdatingProcess": "Error during the updating process.",
     "application_toast_applicationHasBeenUpdated": "Application has been updated",
