--- a/src/app/i18n/locales/fr/translation.json
+++ b/src/app/i18n/locales/fr/translation.json
@@ -26,6 +26,9 @@
     "application_informationApplicationForm_applicationName": "Nom d'Application",
     "application_informationApplicationForm_information": "Information",
     "application_informationApplicationForm_description": "Description",
+    "application_informationApplicationForm_technicalOwner": "Technical owner",
+    "application_informationApplicationForm_businessOwner": "Business owner",
+    "application_informationApplicationForm_numberOfUsers": "Number of users",
     "application_page_newProject": "Nouveau Projet",
     "application_toast_errorOccuredDuringUpdatingProcess": "Erreur durant le processus de mise à jour.",
     "application_toast_applicationHasBeenUpdated": "L'application a été mise à jour",
