Add business capabilities
AB#38

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -7,12 +7,12 @@
     "common_error_max": "Application Name must be max {{length}} characters",
     "common_toast_error_title": "Oh oh! Something went wrong.",
     "common_save": "Save",
-    "common_tags": "Tags",
     "common_label": "Label",    
     "common_search": "Search {{value}}...",
     "common_noFound": "No {{value}} found.",
     "common_select": "Select {{value}}",
     "common_required": "This field is required",
+    "common_description": "Description",
 
     "dashboard_home_myApplications": "My applications",
     "dashboard_home_newApplication": "New application",
@@ -32,20 +32,40 @@
     "application_page_newProject": "New Project",
     "application_toast_errorOccuredDuringUpdatingProcess": "Error during the updating process.",
     "application_toast_applicationHasBeenUpdated": "Application has been updated",
+    
+    "application_businessCapabilities_businessCapabilities": "Business capabilities",
 
     "spinner_loading_loading": "Loading...",
 
-    "customTags_addATag": "Add a tag",
-    "customTags_selectTag": "Select an existing tag",
-    "customTags_createTag": "Or create a new tag",
-    "customTags_label": "New tag label",
+    "customTags_add": "Add a tag",
+    "customTags_select": "Select an existing tag",
+    "customTags_create": "Or create a new tag",
+    "customTags_labelNew": "New tag label",
     "customTags_color": "Choose tag color",
     "customTags_labelAlreadyExistsWithThisColor": "Label already exists with this color",
-    "customTags_removeTag": "Remove tag",
-    "customTags_areYouSureYouWantToRemoveThisTag": "Are you sure you want to remove the following tag ?",
-    "customTags_tagHasBeenAdded": "Tag has been added with success",
-    "customTags_tagHasntBeenAdded": "Error: Tag hasn't been added",
-    "customTags_tagHasBeenRemoved": "Tag has been removed with success",
-    "customTags_tagHasntBeenRemoved": "Tag has not been removed with success",
-    "customTags_selectAnExistingTagOrCreateANewOne": "Select an existing tag or create a new tag."
+    "customTags_remove": "Remove tag",
+    "customTags_areYouSureYouWantToRemove": "Are you sure you want to remove the following tag ?",
+    "customTags_hasBeenAdded": "tag has been added with success",
+    "customTags_hasntBeenAdded": "Error: tag hasn't been added",
+    "customTags_hasBeenRemoved": "tag has been removed with success",
+    "customTags_hasntBeenRemoved": "tag has not been removed with success",
+    "customTags_selectAnExistingOneOrCreateANewOne": "Select an existing tag or create a new tag.",
+    "customTags": "Tags",
+    "customTag": "tag",
+
+    "customBusinessCapabilities_add": "Add a business capability",
+    "customBusinessCapabilities_select": "Select an existing business capability",
+    "customBusinessCapabilities_create": "Or create a new business capability",
+    "customBusinessCapabilities_labelNew": "New business capability label",
+    "customBusinessCapabilities_color": "Choose business capability color",
+    "customBusinessCapabilities_labelAlreadyExistsWithThisColor": "Label already exists with this color",
+    "customBusinessCapabilities_remove": "Remove business capability",
+    "customBusinessCapabilities_areYouSureYouWantToRemove": "Are you sure you want to remove the following business capability ?",
+    "customBusinessCapabilities_hasBeenAdded": "business capability has been added with success",
+    "customBusinessCapabilities_hasntBeenAdded": "Error: business capability hasn't been added",
+    "customBusinessCapabilities_hasBeenRemoved": "business capability has been removed with success",
+    "customBusinessCapabilities_hasntBeenRemoved": "business capability has not been removed with success",
+    "customBusinessCapabilities_selectAnExistingOneOrCreateANewOne": "Select an existing business capability or create a new business capability.",
+    "customBusinessCapabilities": "Business capabilities",
+    "customBusinessCapability": "business capability"
 }
