--- a/src/app/i18n/locales/fr/translation.json
+++ b/src/app/i18n/locales/fr/translation.json
@@ -7,12 +7,12 @@
     "common_error_max": "Le nom de l'application doit comporter au maximum {{length}} caractères",
     "common_toast_error_title": "Oh oh! Quelque chose s'est mal passé.",
     "common_save": "Sauvegarder",
-    "common_tags": "Tags",
     "common_label": "Label",    
     "common_search": "Recherchez {{value}}...",
     "common_noFound": "Aucun {{value}} trouvé.",
     "common_select": "Selectionnez {{value}}",
     "common_required": "Ce champs est requis",
+    "common_description": "Description",
 
     "dashboard_home_myApplications": "Mes applications",
     "dashboard_home_newApplication": "Nouvelle application",
@@ -33,19 +33,39 @@
     "application_toast_errorOccuredDuringUpdatingProcess": "Erreur durant le processus de mise à jour.",
     "application_toast_applicationHasBeenUpdated": "L'application a été mise à jour",
 
+    "application_businessCapabilities_businessCapabilities": "Business capabilities",
+
     "spinner_loading_loading": "Chargement...",
 
-    "customTags_addATag": "Ajouter un tag",
-    "customTags_selectTag": "Selectionner un tag existant",
-    "customTags_createTag": "Ou créer un nouveau tag",
-    "customTags_labelNewTag": "Libellé du nouveau tag",
+    "customTags_add": "Ajouter un tag",
+    "customTags_select": "Selectionner un tag existant",
+    "customTags_create": "Ou créer un nouveau tag",
+    "customTags_labelNew": "Libellé du nouveau tag",
     "customTags_color": "Choisissez la couleur du tag",
     "customTags_labelAlreadyExistsWithThisColor": "Ce libellé existe déjà avec cette couleur",
-    "customTags_removeTag": "Supprimer un tag",
-    "customTags_areYouSureYouWantToRemoveThisTag": "Etes-vous sûr de vouloir supprimer le tag suivant ?",
-    "customTags_tagHasBeenAdded": "Le tag a été ajouté avec succès.",
-    "customTags_tagHasntBeenAdded": "Erreur : Le tag n'a pas été ajouté",
-    "customTags_tagHasBeenRemoved": "Tag has been removed with success",
-    "customTags_tagHasntBeenRemoved": "Tag has not been removed with success",
-    "customTags_selectAnExistingTagOrCreateANewOne": "Sélectionnez un tag existant ou créez un nouveau tag."
+    "customTags_remove": "Supprimer un tag",
+    "customTags_areYouSureYouWantToRemove": "Etes-vous sûr de vouloir supprimer le tag suivant ?",
+    "customTags_hasBeenAdded": "Le tag a été ajouté avec succès.",
+    "customTags_hasntBeenAdded": "Erreur : Le tag n'a pas été ajouté",
+    "customTags_hasBeenRemoved": "Le tag a été supprimé avec succès",
+    "customTags_hasntBeenRemoved": "Le tag n'a pas été supprimé avec succès",
+    "customTags_selectAnExistingOneOrCreateANewOne": "Sélectionnez un tag existant ou créez un nouveau tag.",
+    "customTags": "Tags",
+    "customTag": "tag",
+
+    "customBusinessCapabilities_add": "Ajouter une business capability",
+    "customBusinessCapabilities_select": "Selectionner une business capability existante",
+    "customBusinessCapabilities_create": "Ou créer un nouvel business capability",
+    "customBusinessCapabilities_labelNew": "Libellé de la nouvelle business capability",
+    "customBusinessCapabilities_color": "Choisissez la couleur de la business capability",
+    "customBusinessCapabilities_labelAlreadyExistsWithThisColor": "Ce libellé existe déjà avec cette couleur",
+    "customBusinessCapabilities_remove": "Supprimer une business capability",
+    "customBusinessCapabilities_areYouSureYouWantToRemove": "Etes-vous sûr de vouloir supprimer la business capabilité suivante ?",
+    "customBusinessCapabilities_hasBeenAdded": "La business capability a été ajoutée avec succès.",
+    "customBusinessCapabilities_hasntBeenAdded": "Error: La business capability n'a pas été ajoutée",
+    "customBusinessCapabilities_hasBeenRemoved": "La business capability a été supprimée avec succès",
+    "customBusinessCapabilities_hasntBeenRemoved": "La business capability n'a pas été supprimée avec succès",
+    "customBusinessCapabilities_selectAnExistingOneOrCreateANewOne": "Sélectionnez une business capability existante ou créez une nouvel business capability.",
+    "customBusinessCapabilities": "Business capabilities",    
+    "customBusinessCapability": "business capability"
 }
