Add children applications component
AB#75

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -14,6 +14,10 @@
     "common_required": "This field is required",
     "common_description": "Description",
     "common_application": "Application",
+    "common_noResultFound": "No results found.",
+    "common_selectAll": "Select All",
+    "common_clear": "Clear",
+    "common_close": "Close",
 
     "dashboard_home_myApplications": "My applications",
     "dashboard_home_newApplication": "New application",
@@ -34,16 +38,25 @@
     "application_toast_errorOccuredDuringUpdatingProcess": "Error during the updating process.",
     "application_toast_applicationHasBeenUpdated": "Application has been updated",
     
-    "application_parentChildren_hierarchy": "Hierarchy",    
-    "application_parentChildren_parentApplication": "Parent application",
-    "application_parentChildren_addParentApplication": "Add parent application",
-    "application_parentChildren_selectAnotherParentApplication": "Select another parent application",
-    "application_parentChildren_selectExistingParentApplication": "Select an existing parent application",
-    "application_parentChildren_createANewParentApplication": "Or create a new application",
-    "application_parentChildren_areYouSureYouWantToRemoveTheParentApplication": "Are you sure you want to remove the parent application ?",
-    "application_parentChildren_parentApplicationHasBeenRemoved": "Parent application has been removed.",
-    "application_parentChildren_parentApplicationHasNotBeenRemoved": "Parent application hasn't been removed.",
-    "application_parentChildren_removeTheParentApplication": "Remove parent application",
+    "application_parentApplication_parentApplication": "Parent application",
+    "application_parentApplication_addParentApplication": "Add parent application",
+    "application_parentApplication_selectAnotherParentApplication": "Select another parent application",
+    "application_parentApplication_selectExistingParentApplication": "Select an existing parent application",
+    "application_parentApplication_createANewParentApplication": "Or create a new application",
+    "application_parentApplication_areYouSureYouWantToRemoveTheParentApplication": "Are you sure you want to remove the parent application ?",
+    "application_parentApplication_parentApplicationHasBeenRemoved": "Parent application has been removed.",
+    "application_parentApplication_parentApplicationHasNotBeenRemoved": "Parent application hasn't been removed.",
+    "application_parentApplication": "Remove parent application",
+
+    "application_childrenApplication_childrenApplication": "Children application",
+    "application_childrenApplication_addChildrenApplication": "Add children applications",
+    "application_childrenApplication_selectExistingChildrenApplication": "Select existing children application",
+    "application_childrenApplication_selectChildrenApplication": "Select children applications",
+    "application_childrenApplication_createANewChildApplication": "Add a new application",
+    "application_childrenApplication_removeChildApplication": "Remove child application",
+    "application_childrenApplication_areYouSureYouWantToRemoveThisChildApplication": "Are you sure you want to remove this following child application ?",
+    "application_childrenApplication_childApplicationHasBeenRemoved":"Child application has been removed",
+    "application_childrenApplication_childApplicationHasntBeenRemoved":"Child application hasn't been removed",
 
     "application_businessCapabilities_businessCapabilities": "Business capabilities",
 
