--- a/src/app/i18n/locales/fr/translation.json
+++ b/src/app/i18n/locales/fr/translation.json
@@ -14,6 +14,10 @@
     "common_required": "Ce champs est requis",
     "common_description": "Description",
     "common_application": "Application",
+    "common_noResultFound": "Aucun résultat trouvé.",
+    "common_selectAll": "Tout sélectionner",
+    "common_clear": "Vider",
+    "common_close": "Fermer",
 
     "dashboard_home_myApplications": "Mes applications",
     "dashboard_home_newApplication": "Nouvelle application",
@@ -34,16 +38,25 @@
     "application_toast_errorOccuredDuringUpdatingProcess": "Erreur durant le processus de mise à jour.",
     "application_toast_applicationHasBeenUpdated": "L'application a été mise à jour",
 
-    "application_parentChildren_hierarchy": "Hiérarchie",
-    "application_parentChildren_parentApplication": "Application parente",
-    "application_parentChildren_addParentApplication": "Ajouter l'application parente",
-    "application_parentChildren_selectAnotherParentApplication": "Sélectionner une autre application parente",
-    "application_parentChildren_createANewParentApplication": "Ou créer une nouvelle application",    
-    "application_parentChildren_selectExistingParentApplication": "Sélectionner une application parente existante",
-    "application_parentChildren_areYouSureYouWantToRemoveTheParentApplication": "Etes-vous sûr de vouloir supprimer l'application parente ?",
-    "application_parentChildren_parentApplicationHasBeenRemoved": "L'application parent a bien été supprimée.",
-    "application_parentChildren_parentApplicationHasNotBeenRemoved": "L'application parent n'a pas pu être supprimée.",
-    "application_parentChildren_removeTheParentApplication": "Supprimer l'application parente",
+    "application_parentApplication_parentApplication": "Application parente",
+    "application_parentApplication_addParentApplication": "Ajouter l'application parente",
+    "application_parentApplication_selectAnotherParentApplication": "Sélectionner une autre application parente",
+    "application_parentApplication_createANewParentApplication": "Ou créer une nouvelle application",    
+    "application_parentApplication_selectExistingParentApplication": "Sélectionner une application parente existante",
+    "application_parentApplication_areYouSureYouWantToRemoveTheParentApplication": "Etes-vous sûr de vouloir supprimer l'application parente ?",
+    "application_parentApplication_parentApplicationHasBeenRemoved": "L'application parent a bien été supprimée.",
+    "application_parentApplication_parentApplicationHasNotBeenRemoved": "L'application parent n'a pas pu être supprimée.",
+    "application_parentApplication_removeTheParentApplication": "Supprimer l'application parente",
+
+    "application_childrenApplication_childrenApplication": "Applications enfants",
+    "application_childrenApplication_addChildrenApplication": "Ajouter des applications enfants",
+    "application_childrenApplication_selectExistingChildrenApplication": "Sélectionner des applications enfants existantes",
+    "application_childrenApplication_selectChildrenApplication": "Sélectionner des applications enfants",
+    "application_childrenApplication_createANewChildApplication": "Ajouter une nouvelle application",
+    "application_childrenApplication_removeChildApplication": "Supprimer l'application enfant",
+    "application_childrenApplication_areYouSureYouWantToRemoveThisChildApplication": "Etes-vous sûr de vouloir supprimer l'application enfant suivante ?",
+    "application_childrenApplication_childApplicationHasBeenRemoved":"Child application has been removed",
+    "application_childrenApplication_childApplicationHasNotBeenRemoved":"Child application hasn't been removed",
 
     "application_businessCapabilities_businessCapabilities": "Business capabilities",
 
